--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,4 +27,7 @@
       </table>
     </div>
   </div>
+  <div class="row">
+    <h4>Para crear un nuevo registro presione el icono <span class="icon-clipboard-2"></span></h4>
+  </div>
 </div>
