--- a/app/views/modulo_remitentes/index.html.erb
+++ b/app/views/modulo_remitentes/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing modulo_remitentes</h1>
+<h1>Listando modulo_remitentes</h1>
 
-<table>
+<table class="table bordered">
   <thead>
     <tr>
       <th>Paciente</th>
