--- a/app/views/modulo_calificadas/index.html.erb
+++ b/app/views/modulo_calificadas/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing modulo_calificadas</h1>
+<h1>Listado modulo_calificadas</h1>
 
-<table>
+<table class = "table bordered">
   <thead>
     <tr>
       <th>Paciente</th>
