--- a/app/views/pacientes/index.html.erb
+++ b/app/views/pacientes/index.html.erb
@@ -1,9 +1,15 @@
-<h1>Listing pacientes</h1>
+<h1>Listado pacientes</h1>
 
-<table>
+<table class="table bordered">
   <thead>
     <tr>
-      <th>User</th>
+      <th>Usuario</th>
+      <th>Nombre</th>
+      <th>Nombre Entidad</th>
+      <th>Ciudad</th>
+      <th>Departamento</th>
+      <th>email</th>
+      <th colspan="2">Reportes</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -11,7 +17,14 @@
   <tbody>
     <% @pacientes.each do |paciente| %>
       <tr>
-        <td><%= paciente.user %></td>
+        <td><%= paciente.user.email %></td>
+        <td><%= paciente.modulo_remitente.nombre %></td>
+        <td><%= paciente.modulo_remitente.nombre_entidad %></td>
+        <td><%= paciente.modulo_remitente.ciudad %></td>
+        <td><%= paciente.modulo_remitente.departamento %></td>
+        <td><%= paciente.modulo_receptora.email %></td>
+        <td><%= link_to 'XML', "#{paciente_path(paciente)}.xml" %></td>
+        <td><%= link_to 'Json', "#{paciente_path(paciente)}.json" %></td>
         <td><%= link_to 'Show', paciente %></td>
         <td><%= link_to 'Edit', edit_paciente_path(paciente) %></td>
         <td><%= link_to 'Destroy', paciente, method: :delete, data: { confirm: 'Are you sure?' } %></td>
